# football_detection

./: .gitignore  README.md  demo.py  justfile  main.py  pyproject.toml  test.py
football-players-detection.v19/: README.roboflow.txt
scripts/: setup.ps1  setup.sh
sports/annotators/: soccer.py
sports/common/: team.py
trains/: train_ball_detector.py  train_pitch_keypoint_detector.py  train_player_detector.py
