[project]
name = "football_detection"
version = "0.1.0"
description = "Add your description here"
author = "SuperWindCloud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.6.0",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "protobuf>=6.32.1",
    "python-dotenv>=1.1.1",
    "roboflow>=1.2.11",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "supervision>=0.26.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "ultralytics>=8.3.204",
    "umap>=0.1.1",
    "umap-learn>=0.5.9.post2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
